// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GSuitePurchaseFeatures it renders GSuitePurchaseFeatures in a grid 1`] = `
Array [
  <div
    className="gsuite-purchase-features__features-grid"
  >
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Gmail Logo"
          src="/calypso/images/g-suite/logo_gmail_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          A custom @testing123.com email address
        </h5>
        <p>
          Professional ad-free email that works with most email clients.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Google Docs Logo"
          src="/calypso/images/g-suite/logo_docs_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          Docs, spreadsheets and more
        </h5>
        <p>
          Collaborate in real-time with documents, spreadsheets and slides.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Google Drive Logo"
          src="/calypso/images/g-suite/logo_drive_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          Keep all your files secure
        </h5>
        <p>
          Get 30GB of storage for all your files synced across devices.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Google Hangouts Logo"
          src="/calypso/images/g-suite/logo_hangouts_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          Connect with your team
        </h5>
        <p>
          Use text chats, voice calls, or video calls, with built in screen sharing.
        </p>
      </div>
    </div>
  </div>,
  <div
    className="gsuite-purchase-features__learn-more"
  >
    <p>
      <strong>
        No setup or software required.
      </strong>
       
      <a
        className="gsuite-purchase-features__learn-more-link"
        href="https://en.support.wordpress.com/adding-g-suite-to-your-site"
        onClick={[Function]}
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more about integrating G Suite with your site.
      </a>
    </p>
  </div>,
]
`;

exports[`GSuitePurchaseFeatures it renders GSuitePurchaseFeatures in a list 1`] = `
Array [
  <div
    className="gsuite-purchase-features__features-list"
  >
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Gmail Logo"
          src="/calypso/images/g-suite/logo_gmail_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          A custom @testing123.com email address
        </h5>
        <p>
          Professional ad-free email that works with most email clients.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Google Docs Logo"
          src="/calypso/images/g-suite/logo_docs_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          Docs, spreadsheets and more
        </h5>
        <p>
          Collaborate in real-time with documents, spreadsheets and slides.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Google Drive Logo"
          src="/calypso/images/g-suite/logo_drive_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          Keep all your files secure
        </h5>
        <p>
          Get 30GB of storage for all your files synced across devices.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Google Hangouts Logo"
          src="/calypso/images/g-suite/logo_hangouts_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          Connect with your team
        </h5>
        <p>
          Use text chats, voice calls, or video calls, with built in screen sharing.
        </p>
      </div>
    </div>
  </div>,
  <div
    className="gsuite-purchase-features__learn-more"
  >
    <p>
      <strong>
        No setup or software required.
      </strong>
       
      <a
        className="gsuite-purchase-features__learn-more-link"
        href="https://en.support.wordpress.com/adding-g-suite-to-your-site"
        onClick={[Function]}
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more about integrating G Suite with your site.
      </a>
    </p>
  </div>,
]
`;

exports[`GSuitePurchaseFeatures it renders GSuitePurchaseFeatures with basic plan 1`] = `
Array [
  <div
    className="gsuite-purchase-features__features-grid"
  >
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Gmail Logo"
          src="/calypso/images/g-suite/logo_gmail_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          A custom @testing123.com email address
        </h5>
        <p>
          Professional ad-free email that works with most email clients.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Google Docs Logo"
          src="/calypso/images/g-suite/logo_docs_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          Docs, spreadsheets and more
        </h5>
        <p>
          Collaborate in real-time with documents, spreadsheets and slides.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Google Drive Logo"
          src="/calypso/images/g-suite/logo_drive_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          Keep all your files secure
        </h5>
        <p>
          Get 30GB of storage for all your files synced across devices.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Google Hangouts Logo"
          src="/calypso/images/g-suite/logo_hangouts_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          Connect with your team
        </h5>
        <p>
          Use text chats, voice calls, or video calls, with built in screen sharing.
        </p>
      </div>
    </div>
  </div>,
  <div
    className="gsuite-purchase-features__learn-more"
  >
    <p>
      <strong>
        No setup or software required.
      </strong>
       
      <a
        className="gsuite-purchase-features__learn-more-link"
        href="https://en.support.wordpress.com/adding-g-suite-to-your-site"
        onClick={[Function]}
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more about integrating G Suite with your site.
      </a>
    </p>
  </div>,
]
`;

exports[`GSuitePurchaseFeatures it renders GSuitePurchaseFeatures with business plan 1`] = `
Array [
  <div
    className="gsuite-purchase-features__features-grid"
  >
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Gmail Logo"
          src="/calypso/images/g-suite/logo_gmail_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          A custom @testing123.com email address
        </h5>
        <p>
          Professional ad-free email that works with most email clients.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Google Docs Logo"
          src="/calypso/images/g-suite/logo_docs_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          Docs, spreadsheets and more
        </h5>
        <p>
          Collaborate in real-time with documents, spreadsheets and slides.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Google Drive Logo"
          src="/calypso/images/g-suite/logo_drive_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          Keep all your files secure
        </h5>
        <p>
          Get unlimited storage for all your files synced across devices.
        </p>
      </div>
    </div>
    <div
      className="gsuite-purchase-features__feature"
    >
      <div
        className="gsuite-purchase-features__feature-image"
      >
        <img
          alt="Google Hangouts Logo"
          src="/calypso/images/g-suite/logo_hangouts_48dp.svg"
        />
      </div>
      <div
        className="gsuite-purchase-features__feature-block"
      >
        <h5
          className="gsuite-purchase-features__feature-header"
        >
          Connect with your team
        </h5>
        <p>
          Use text chats, voice calls, or video calls, with built in screen sharing.
        </p>
      </div>
    </div>
  </div>,
  <div
    className="gsuite-purchase-features__learn-more"
  >
    <p>
      <strong>
        No setup or software required.
      </strong>
       
      <a
        className="gsuite-purchase-features__learn-more-link"
        href="https://en.support.wordpress.com/adding-g-suite-to-your-site"
        onClick={[Function]}
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more about integrating G Suite with your site.
      </a>
    </p>
  </div>,
]
`;
